--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@medusajs/medusa": "^1.12.1",
     "@medusajs/medusa-js": "^6.0.1",
+    "@medusajs/product": "^0.1.1",
     "@tanstack/react-query": "^4.29.19",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
