--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@medusajs/medusa": "^1.12.1",
     "@medusajs/medusa-js": "^6.0.1",
     "@medusajs/product": "^0.1.1",
@@ -15,6 +17,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "medusa-react": "^9.0.1",
     "react": "^18.2.0",
